table width issues cleaned up, table spacing shifted to .basic-table class only to avoid wierdness and hopefully save time

--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -249,7 +249,6 @@ form {
 		}
 	}
 	thead {
-		position: relative;
 		tr {
       td, th {
 				background-color: $gray-2;
@@ -257,27 +256,15 @@ form {
 				font-weight: 600;
 				font-size: .875em;
 				text-transform: uppercase;
-				padding-bottom: 1.5rem;
 				vertical-align: bottom;
-			}
-			&::after {
-				content: '';
-				position: absolute;
-				bottom: -1px;
-				left: 0;
-				width: 100%;
-				height: .75rem;
-				background: $white;
-				border-bottom: 1px solid $gray-2;
-				.panel & {
-					border: none;
-				}
 			}
 		}
 	}
 	tbody {
 		border: 1px solid $gray-2;
-		border-top: 0px;
+		border-collapse: separate;
+		position: relative;
+		top: 2px;
 		tr {
 			td {
 				font-weight: 600;
@@ -287,6 +274,32 @@ form {
 		}
 		.panel & {
 			border: none;
+		}
+	}
+	&.basic-table {
+		thead {
+			border: 1px solid $white;
+			border-bottom: .75em solid $white;
+		}
+		tbody {
+			tr {
+				&:first-of-type {
+					td {
+						position: relative;
+						&::before {
+							content: '';
+							position: absolute;
+							top: -2px;
+							left: 0;
+							right: 0;
+							display: block;
+							width: 100%;
+							height: 1px;
+							background-color: $gray-2
+						}
+					}
+				}
+			}
 		}
 	}
 }
@@ -940,6 +953,7 @@ body.availability-forecast {
 	    td {
 		    padding: 0px 5px !important;
 		  }
+
 	  }
 
 	  // .driver-availability-table tr.odd {
